# innometrics-agent-os-linux

./: .gitignore  .gitmodules  Cargo.toml  FAQ.md  LICENSE  README.md  Versions.md  build.gradle  settings.gradle
.github/workflows/: gradle.yml
InnoMetricsSources/: CMakeLists.txt
InnoMetricsSources/Sources/: Authorization.h  MainWindow.h  inno.cfg  send_demon_main.h
browser_extension/: .gitignore  build.sh  package.json  readme.md  webpack.config.js
browser_extension/source/: background.js  manifest.json
innometrics-api/: Cargo.toml
innometrics-api/src/: api.rs  dto.rs  error.rs  ext.rs  jwt.rs  lib.rs  prelude.rs
innometrics-api/src/format/: date.rs
innometrics-api/src/imp/: adapter.rs  authenticated_adapter.rs  authenticator.rs  mod.rs
innometrics-app/: Cargo.toml  build.rs  qml.qrc
innometrics-app/icons/innometrics/: index.theme
innometrics-app/qml/: AccountManagerActor.qml  AccountManagerWindow.qml  TrayIcon.qml  main.qml
innometrics-app/qml/actions/: ActionTypes.qml  AppActions.qml  WindowNames.qml  qmldir
innometrics-app/qml/middlewares/: SystemMiddleware.qml
innometrics-app/qml/settings/: AppQtSettings.qml  qmldir
innometrics-app/qml/stores/: AuthStore.qml  MainStore.qml  MainWindowStore.qml  RootStore.qml  UserPrefsStore.qml
innometrics-app/qml/views/: LoginPage.qml  MainWindow.qml  TrayIcon.qml
innometrics-app/src/: authstate.cpp  authstate.h  authstore.cpp  authstore.h  credentials.cpp  credentials.h  credentialsmanager.cpp  credentialsmanager.h  log.rs  main.cpp  main.rs  qrc.rs
innometrics-app/src/innometrics/: api.rs  auth_state.rs  auth_utils.rs  mod.rs
innometrics-collector/: Cargo.toml
innometrics-collector/src/: ewmh.rs  lib.rs  main.rs
playground/: Cargo.toml
playground/src/: main.rs
quickflux-rs/: Cargo.toml  README.md  build.rs
quickflux-rs/cpp/include/: QFAppDispatcherPtr  QFDispatcherPtr  QmlEngineHolder  SignalCppRepresentation
quickflux-rs/src/: app_dispatcher.rs  dispatcher.rs  lib.rs  tests.rs
src/main/deb_extra/: postinst  postrm
src/main/java/: module-info.java
src/main/java/com/application/: AppLauncher.java
src/main/java/com/application/UI/: LoginPage.java  MainPage.java  UpdatePage.java
src/main/java/com/application/collectorApi/: DataCollectorAPI.java
src/main/java/com/application/data/: Activity.java  SystemProcess.java
src/main/java/com/application/model/: BrowserEventsHandler.java  Model.java  SettingsPersister.java
src/main/java/com/application/nativeimpl/: ActiveWindowInfo.java  X11ProcFsWindowInfo.java
src/main/resources/: chromium-policy.json  ext-update.xml  firefox-policy.json  update.sh  userdb.db
src/test/: README.md
src/test/java/: module-info.java
src/test/java/ApplicationUITest/: SimpleTests.java
src/test/java/ModelTest/: ConfigLoadTest.java  ModelTest.java
src/test/java/UIComponentsPresenceTests/: loginPageComponentsTest.java  mainPageComponentsTest.java
src/test/java/testingUtils/: DataCollectorApplication.java
src/test/resources/: db.json  testConfig.json
(+2 files in other folders)
