[package]
name = "innometrics-api"
version = "0.1.0"
authors = ["ivan tkachenko <me@ratijas.tk>"]
edition = "2018"

[lib]
name = "innometrics_api"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

quick-error = "1"

[dependencies.reqwest]
version = "0.10.4"
features = ["blocking", "json"]

[dev-dependencies]
mockito = "0.25.1"
