[package]
name = "innometrics-app"
version = "0.1.0"
authors = ["ivan tkachenko <me@ratijas.tk>"]
edition = "2018"

[[bin]]
name = "Innometrics"
path = "src/main.rs"

[dependencies]
cstr = "0.1.7"

qmetaobject = { git = "https://github.com/ratijas/qmetaobject-rs.git" }
qmetaobject_impl = { git = "https://github.com/ratijas/qmetaobject-rs.git" }

innometrics-api = { path = "../innometrics-api" }
innometrics-collector = { path = "../innometrics-collector" }
quickflux-rs = { path = "../quickflux-rs" }
