[package]
name = "innometrics-app"
version = "0.1.0"
authors = ["ivan tkachenko <me@ratijas.tk>"]
edition = "2018"

[[bin]]
name = "innometrics"
path = "src/main.rs"

[dependencies]
cstr = "0.1.7"

log = "0.4"
env_logger = "0.7"

qmetaobject = { git = "https://github.com/ratijas/qmetaobject-rs.git" }
qmetaobject_impl = { git = "https://github.com/ratijas/qmetaobject-rs.git" }

innometrics-api = { path = "../innometrics-api" }
innometrics-collector = { path = "../innometrics-collector" }
quickflux-rs = { path = "../quickflux-rs" }


cpp = "0.5.4"
[build-dependencies]
cmake = "0.1"
cpp_build = "0.5.4"
cargo-emit = "0.1.1"
