[package]
name = "innometrics-collector"
version = "0.1.0"
authors = ["ivan tkachenko <me@ratijas.tk>"]
edition = "2018"

[lib]
name = "innometrics_collector"
path = "src/lib.rs"

[dependencies]
xcb = "0.9.0"
xcb-util = { version = "0.3.0", features = ["ewmh", "icccm", "thread"]}

libc = "0.2"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
