[package]
name = "rs"
version = "0.1.0"
authors = ["ivan tkachenko <me@ratijas.tk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qmetaobject = { git = "https://github.com/ratijas/qmetaobject-rs.git" }
qmetaobject_impl = { git = "https://github.com/ratijas/qmetaobject-rs.git" }
quickflux-rs = { path = "../quickflux-rs" }
innometrics-collector = { path = "../innometrics-collector" }
